tests/ui/duplicate-fmt.stderr
error: only one #[error(...)] attribute is allowed
 --> tests/ui/duplicate-fmt.rs:5:1
  |
3 | #[derive(Error, Debug)]
  |          ----- in this derive macro expansion
4 | #[error("...")]
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
